linters+triggers+small refactor
